# storage/api-docs/api-docs.json
@@ -268,6 +268,23 @@
                 }
             }
         },
+        "/new-members-this-week": {
+            "get": {
+                "tags": [
+                    "Auth"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "Generic response"
+                    }
+                }
+            }
+        },
         "/update-profile": {
             "post": {
                 "tags": [
